Update top image
Used the github image instead of the referenced image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: compress
 <div class="container">
     <header class="header">
         <div class="imgbox">
-            <img class="center-fit" src="/img/Top.png">
+            <img class="center-fit" src="https://raw.githubusercontent.com/PatriciaSylvester/PatriciaSylvester.github.io/master/img/top.png">
         </div>        
         <h1>Patricia Sylvester<span>PatriciaSylvester32@gmail.com</span></h1>
         <a href="https://www.instagram.com/accounts/login/?next=/rosehill185/"><i class="fa fa-instagram fa-3x"></i></a>
