--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ layout: compress
             <img class="center-fit" src="https://raw.githubusercontent.com/PatriciaSylvester/PatriciaSylvester.github.io/master/img/top.png">
         </div>        
         <h1>Patricia Sylvester<span>PatriciaSylvester32@gmail.com</span></h1>
-        <a href="https://www.instagram.com/accounts/login/?next=/rosehill185/"><i class="fa fa-instagram fa-3x"></i></a>
+        <a href="https://www.instagram.com/rosehill185/?igshid=scrbb77znlyi"><i class="fa fa-instagram fa-3x"></i></a>
         <!-- <nav class="links"> -->
             <!-- <a href="#"><i class="fa fa-twitter-square fa-3x"></i></a> -->
             
